# igo_planner

./: .gitignore  README.md  pyproject.toml
docs/: black_box_trajectory_planning_tutorial.md  generate_black_box_tutorial_figures.py
docs/validation/: README.md  initial_validation_report.json  initial_validation_report.md  multi_actor_validation_report.json  multi_actor_validation_report.md
spatiotemporal_joint_planner/: __init__.py  demo.py
spatiotemporal_joint_planner/application/: __init__.py  configuration.py  factories.py  planner_factory.py  scenario_factory.py  trajectory_model_factory.py
spatiotemporal_joint_planner/belief/: __init__.py  actor_type.py  bayesian_filter.py
spatiotemporal_joint_planner/common/: __init__.py  types.py
spatiotemporal_joint_planner/contingency/: __init__.py  belief_continuation.py  risk_aggregator.py
spatiotemporal_joint_planner/cost/: __init__.py  base.py  parametric_trajectory_cost.py
spatiotemporal_joint_planner/game/: __init__.py  base.py  bayesian_game_parametric_planner.py  bayesian_igo_optimizer.py  game_parametric_planner.py  igo_game_optimizer.py
spatiotemporal_joint_planner/optimizer/: __init__.py  base.py  cma_es_optimizer.py
spatiotemporal_joint_planner/planner/: __init__.py  base.py  parametric_planner.py
spatiotemporal_joint_planner/scenario/: __init__.py  base.py  dense_target_lane_change.py  (+5 more)
tests/: test_bayesian_igo_flow.py  test_belief_and_contingency.py  test_cost_consistency.py  test_multi_actor_intersection.py  test_regret_oracle.py  test_strict_execution.py  test_temporal_collision.py
(+37 files in other folders)
